# pj-ecommerce-cdc

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup_venv.sh
application/cdc-testing-ui/: README.md  app.py  demo_data.py
application/cdc-testing-ui/config/: settings.py
application/cdc-testing-ui/managers/: database.py  kafka.py
application/cdc-testing-ui/utils/: helpers.py
application/cdc-testing-ui/views/: batch_testing.py  customers.py  dashboard.py  kafka_monitor.py  orders.py  products.py
data-platform/cdc/commands/: get_connector_conf.sh  get_connectors.sh  post_connector.sh  restart_connector.sh  update_connector.sh
data-platform/cdc/connectors/: register-pg.json
data-platform/dashboards/clickhouse/: analytics_views.sql
data-platform/dashboards/grafana/: customer-insights.json  executive-dashboard.json  test-dashboard.json
data-platform/streaming/scripts/: test_consume.sh  test_produce.sh  test_produce_consume.sh
data-platform/streaming/spark/: README.md
docs/: analytics.md  architecture.md  deploy_azure_vm.md  deploy_azure_vm_manual.md
infrastructure/docker/: docker-compose.analytics.yml  docker-compose.db.yml  docker-compose.debezium.yml  docker-compose.kafka.yml  docker-compose.spark.yml  docker-compose.ui.yml  docker-compose.yml
infrastructure/docker/clickhouse/: create_tables.sql
infrastructure/docker/kafka/: console-config.yaml
infrastructure/terraform/: README.md  cloud-init-docker.yaml  main.tf
scripts/: run_cdc.sh  run_cdc_job.sh  setup_simple_analytics.sh  sync_dashboards.sh
(+38 files in other folders)
