[tool.poetry]
name = "ecommerce-cdc"
version = "0.1.0"
description = "CDC Event Testing Dashboard for ecommerce system"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.39.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.3"
kafka-python = "^2.0.2"
plotly = "^5.24.1"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
